@@ -2,6 +2,7 @@
 
 - Remove @Inject from Logger.
 - Add HTTP/2 input buffer size config.
+- Add support for monitoring the Jetty client shared thread pool.
 - Ensure Jetty client request doesn't live past synchronous return.
 - Enable detailed dumps for Jetty thread pools, which will help getting
   more information when debugging with the JMX dump operation.
